@@ -194,7 +194,7 @@ list_of_calib_groups = ('UNDEFINED',
                         'Camera::CalibV1',
                         'Camera::CalibV1',
                         'Epix::CalibV1',
-                        'Epix10k::CalibV1',
+                        'Epix10ka::CalibV1',
                         'Epix100a::CalibV1',
                         'Camera::CalibV1',
                         'Andor::CalibV1',
